added favicon and added media query for screens <550px

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Password Generator</title>
+        <!-- custom css -->
         <link rel="stylesheet" href="style.css" />
+         <!-- favicon -->
+         <link rel="shortcut icon" type="image/png" href="favicon.png" />
     </head>
     <body>
         <form id="generatorContainer">
@@ -13,7 +16,7 @@
             </div>
             <div class="passwordFeaturesContainer">
                 <label for="passLength">Password Length</label>
-                <input type="number" step="1" min="4" max="30" id="passLength" required />
+                <input type="number" step="1" min="4" max="50" id="passLength" required />
             </div>
             <div class="passwordFeaturesContainer">
                 <label for="lowerCase">Contain Lowercase Letters</label>
